--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,6 @@
     "langchain": "^0.3.30",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
-    "sqlite3": "^5.1.7"
+    "node-cache": "^5.1.2"
   }
 }
