--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
@@ -27,8 +28,10 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
     "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "resend": "^4.7.0"
   }
 }
